--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,22 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Resoc!</a>
+    <a class="navbar-brand" routerLink="presentation">Resoc!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="accueil">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" routerLink="">Autre bouton</a>
         </li>
       </ul>
       <span class="navbar-text">
-        Navbar text with an inline element
+        <a class="nav-link" routerLink="settings">Parametre</a>
       </span>
     </div>
 </nav>
   
 
-<app-acceuil></app-acceuil>
+<router-outlet></router-outlet>
