Création du bouton pour se connecter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li routerLinkActive="active" class="nav-item">
           <a class="nav-link" routerLink="accueil">Accueil</a>
         </li>
-        <li class="nav-item">
+        <li routerLinkActive="active" class="nav-item">
           <a class="nav-link" routerLink="">Autre bouton</a>
         </li>
       </ul>
       <span class="navbar-text">
+          <a class="nav-link" routerLink="authentification">Se connecter</a>
         <a class="nav-link" routerLink="settings">Parametre</a>
       </span>
     </div>
