Ajout du component cours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <a class="nav-link" routerLink="accueil">Accueil</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
-          <a class="nav-link" routerLink="">Autre bouton</a>
+          <a class="nav-link" routerLink="cours">Tout les cours</a>
         </li>
       </ul>
       <span class="navbar-text">
