--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+@font-face {
+    font-family: myFirstFont;
+    src: url(/bold.ttf);
+  }
+  
