--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,3 +1,22 @@
-<p>
-  presentation works!
-</p>
+<div class="blueborder container-fluid ">
+  
+  <div class="row lol"  >
+    <div class="col-md-3 col-sm-0"></div>
+    <div class="col-md-6 col-sm-12"> 
+        <h3 >L'université 2.0</h3>
+        <h4>Resoc est complètement gratuit, les cours sont et resterons opensource.</h4>  
+    </div>
+    <div class="col-md-3 col-sm-0"></div>
+  </div>
+    <div class="row" >
+        <div class="col-md-3 col-sm-0"></div>
+        <div class="col-md-6 col-sm-12"> 
+            
+        </div>
+        <div class="col-md-3 col-sm-0"></div>
+    </div>
+  
+     
+  
+</div>
+
