Communication avec la bdd
Permet de stocker et de charger les cours de la base de donnée.
Pour l'instant, impossible de charger, mais possibilité de l'activé.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,7 @@
       
           <div>
               
-            <a class="nav-link" routerLinkActive="active" routerLink="authentification"> 
-              <h3>Se connecter</h3></a>
+           <a class="nav-link" routerLinkActive="active" routerLink="signup"><h3>Créer un compte</h3></a>
           </div>
           
         </div>
