--- a/src/app/liste-cours/liste-cours.component.html
+++ b/src/app/liste-cours/liste-cours.component.html
@@ -13,4 +13,8 @@
       </ul>
     </div>
   </div>
+
+<button class="btn btn-primary" (click)="onSave()">Enregistrer les cours</button>
+
+<button class="btn btn-primary" (click)="onFetch()">Recupérer les cours sur la bdd</button>
 </div>
