Ajout de l'onglet forum a coté de chaque cours. Avec possibilité de cliquer pour afficher les messages

--- a/src/app/liste-cours/liste-cours.component.html
+++ b/src/app/liste-cours/liste-cours.component.html
@@ -6,7 +6,8 @@
         <app-cours *ngFor="let cours of liste_cours"
           [coursTitre]="cours.titre"
           [coursStatus]="cours.status"
-          [coursContenu]="cours.contenu"></app-cours>
+          [coursContenu]="cours.contenu"
+          [coursForum]="cours.forum"></app-cours>
 
           
         
