Les cours ne passent plus par une variable intermédiaire de liste-cours.component.ts

--- a/src/app/liste-cours/liste-cours.component.html
+++ b/src/app/liste-cours/liste-cours.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       <h2>Liste des cours</h2>
       <ul class="list-group">
-        <app-cours *ngFor="let cours of liste_cours"
+        <app-cours *ngFor="let cours of coursService.liste_cours"  #Sois jutilise la variable créer dans liste-cours.compoent.ts sois jutilise directement coursService
           [coursTitre]="cours.titre"
           [coursStatus]="cours.status"
           [coursContenu]="cours.contenu"
@@ -20,6 +20,7 @@
 
 
 </div>
+
 
 
 
