--- a/src/app/presentation/presentation.component.css
+++ b/src/app/presentation/presentation.component.css
@@ -1,9 +1,11 @@
-
+body{
+    background-color: #CFE8CE; 
+}
   
 
 
 .blueborder{
-    background-color: #066EE2;
+    background-color: #C2B7B7;
     height: 200px;
 }
 
@@ -33,6 +35,24 @@ h4{
     
 }
 
+.presentation{
+    background-color: red;
+    margin-top: 10%;
+}
+.presentationdeux{
+    background-color: red;
+    margin-top: 0%;
+}
+
+.learn {
+    padding-top: 50px;
+    height: 80%;
+    width: 80%;
+
+}
+
+
+
 
 @media (min-width: 1100px) { 
     .blueborder{
@@ -45,5 +65,6 @@ h4{
         color: white;
         font-family: myFirstFont, sans-serif;
     }
- }
+    
+}
 
