--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -15,8 +15,65 @@
         </div>
         <div class="col-md-3 col-sm-0"></div>
     </div>
-  
-     
-  
 </div>
+
+
+
+<div class="containre-fluid presentation">
+        <div class="container">
+        <div class="row">
+        
+                <article class="col-md-6 col-sm-6 col-lg-6">
+                    <h4> <u>FONCTIONNEMENT</u>  </h4> 
+                        tu es un élève qui veut progresser alors ce site est fait por toi.
+                        Tu t'inscrit, tu participes à des cours, tu suis les conseilles que les autres te disent et ta moyenne augmentera
+                </article>
+        
+                <article class="col-md-6 col-sm-6 col-lg-6">
+                     <h4> <u> UTILITÉ </u> </h4>	
+                        Ce site est utile pour tout le monde. Un élève en difficulté peut s'inscrire et reussir à combler ses lacunes. Cependant, un bonne élève peut quand même s'inscrire pour réviser ou pour consolider ses acquis.
+                </article>
+        </div>
+        </div>
+        </div>
+
+        <div class="containre-fluid presentation">
+            <div class="container">
+            <div class="row">
+            
+                    <div class="col-md-6 col-sm-6 col-lg-6">
+                        <img src="https://cdn.pixabay.com/photo/2015/01/08/18/26/write-593333_960_720.jpg" alt="" class="learn">
+                    
+                    </div>
+                
+                
+                
+                    <article class="col-md-6 col-sm-6 col-lg-6">
+                        Superatis Tauri montis verticibus qui ad solis ortum sublimius attolluntur, Cilicia spatiis porrigitur late distentis dives bonis omnibus terra, eiusque lateri dextro adnexa Isauria, pari sorte uberi palmite viget et frugibus minutis, quam mediam navigabile flumen Calycadnus interscindit.	
+                            
+                    </article>
+                    
+            </div>
+            </div>
+            </div>
+        
+            <div class="containre-fluid presentation">
+                <div class="container">
+                <div class="row">
+
+                        <article class="col-md-6 col-sm-6 col-lg-6">
+                                Superatis Tauri montis verticibus qui ad solis ortum sublimius attolluntur, Cilicia spatiis porrigitur late distentis dives bonis omnibus terra, eiusque lateri dextro adnexa Isauria, pari sorte uberi palmite viget et frugibus minutis, quam mediam navigabile flumen Calycadnus interscindit.	
+                                    
+                            </article>
+                
+                        <div class="col-md-6 col-sm-6 col-lg-6">
+                            <img src="https://cdn.pixabay.com/photo/2015/02/02/11/08/office-620817_960_720.jpg" alt="" class="learn">
+                        
+                        </div> 
+
+                        
+                </div>
+                </div>
+                </div>     
+
 
