--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,9 @@
 </div>
   
 
-<router-outlet></router-outlet>
+<div [@routerAnimation]="getRouteAnimation(route)">
+  <router-outlet #route="outlet"></router-outlet>
+</div>
 
 
 
