--- a/src/app/presentation/presentation.component.css
+++ b/src/app/presentation/presentation.component.css
@@ -1,9 +1,10 @@
-
-  
+body{
+    background-color:  #CFE8CE;
+}
 
 
 .blueborder{
-    background-color: #066EE2;
+    background-color: #C2B7B7;
     height: 200px;
 }
 
@@ -16,7 +17,7 @@ h3{
     font-size: 4vmax;
     color: white;
     font-family: myFirstFont, sans-serif;
-    
+
 }
 h4{
     text-align: center;
@@ -29,21 +30,42 @@ h4{
 .lol{
     position: relative;
     top: 35%;
-    
-    
+
+
 }
 
+.presentation{
+    background-color: #CFE8CE;
+    margin-top: 10%;
+}
 
-@media (min-width: 1100px) { 
+.learn {
+    padding-top: 5px;
+    height: 80%;
+    width: 80%;
+
+}
+.learn_d {
+    padding-top: 5px;
+    height: 80%;
+    width: 80%;
+
+}
+footer {
+    width:100%;
+    background-color: #A1D8C6;
+
+  }
+
+@media (min-width: 1100px) {
     .blueborder{
         background-color: #066EE2;
         height: 300px;
-    } 
+    }
     h3{
         text-align: center;
         font-size: 2.5vmax;
         color: white;
         font-family: myFirstFont, sans-serif;
     }
- }
-
+}
