--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
            *ngIf="authService.userData"><h3>Déconnexion</h3></a>
 
            <a routerLink="parametre"
-           *ngIf="authService.userData"><h3>Parametre</h3></a>
+           *ngIf="authService.userData"><h3>Paramètre</h3></a>
           </div>
 
         </div>
