--- a/src/app/presentation/presentation.component.css
+++ b/src/app/presentation/presentation.component.css
@@ -35,7 +35,6 @@ h4{
 }
 
 .presentation{
-    background-color: #CFE8CE;
     margin-top: 10%;
 }
 
@@ -53,7 +52,7 @@ h4{
 }
 footer {
     width:100%;
-    background-color: #A1D8C6;
+    background-color: #066EE2;
 
   }
 
