Modification icon et orhographe

--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-3 col-sm-0"></div>
     <div class="col-md-6 col-sm-12">
         <h3 >L'université 2.0</h3>
-        <h4>Resoc est complètement gratuit, les cours sont et resterons opensource.</h4>
+        <h4>Resoc est complètement gratuit, les cours sont et resteront opensource.</h4>
     </div>
     <div class="col-md-3 col-sm-0"></div>
   </div>
@@ -24,13 +24,13 @@
 
                 <article class="col-md-6 col-sm-6 col-lg-6">
                     <h4> <u>FONCTIONNEMENT</u>  </h4>
-                        tu es un élève qui veut progresser alors ce site est fait por toi.
-                        Tu t'inscrit, tu participes à des cours, tu suis les conseilles que les autres te disent et ta moyenne augmentera
+                        Tu es un élève qui veut progresser alors ce site est fait pour toi.
+                        Tu t'inscrit, tu participes à des cours, tu suis les conseils que les autres te disent et ta moyenne augmentera
                 </article>
 
                 <article class="col-md-6 col-sm-6 col-lg-6">
                      <h4> <u> UTILITÉ </u> </h4>    
-                        Ce site est utile pour tout le monde. Un élève en difficulté peut s'inscrire et reussir à combler ses lacunes. Cependant, un bonne élève peut quand même s'inscrire pour réviser ou pour consolider ses acquis.
+                        Ce site est utile pour tout le monde. Un élève en difficulté peut s'inscrire et réussir à combler ses lacunes. Cependant, un bon élève peut quand même s'inscrire pour réviser ou pour consolider ses acquis.
                 </article>
         </div>
         </div>
