--- a/src/app/viewcours/viewcours.component.html
+++ b/src/app/viewcours/viewcours.component.html
@@ -15,7 +15,7 @@
 <div  *ngFor="let cours of coursService.liste_cours" >
    <div *ngIf="cours.titre == id">
       <div class="container">
-         <a routerLink ="/cours"><img src="https://cdn.icon-icons.com/icons2/1674/PNG/512/arrowback_111142.png" height="42px" width="42px"/> Retour  </a>
+         <a routerLink ="/cours"><img src="https://image.flaticon.com/icons/png/512/61/61022.png" height="42px" width="42px"/> Retour  </a>
          <div class="espaceTitre"></div>
          <div class="row">
             <div class="col-sm-3 menu">
@@ -70,7 +70,7 @@
 
 
 
-<hr width="100%" color="blue">
+                        <hr width="100%" color="blue">
                   </div>
 
                </div>
